<resources>
    <string name="app_name">SimpleToDo</string>
    <string name="action_settings">Settings</string>
    <string name="action_add">Add</string>
    <string name="action_save">Save</string>
    <string name="action_edit">Edit</string>
    <string name="action_delete">Delete</string>

    <string name="item_taskname">Task Name</string>
    <string name="item_duedate">Due Date</string>
    <string name="item_memo">Memo</string>
    <string name="item_priority">Priority</string>
    <string name="item_status">Status</string>

    <string name="hint_max_10">Max 10 characters</string>
    <string name="hint_max_20">Max 20 characters</string>
    <string name="hint_max_30">Max 30 characters</string>
    <string name="hint_max_100">Max 100 characters</string>

    <string name="title_item_detail">Item Detail</string>

    <string name="info_save_successful">Item was successfully saved.</string>
    <string name="info_delete_successful">Item was successfully deleted.</string>

    <string name="warning_delete_item">Delete this item?</string>

    <string name="error_enter_taskname">Please enter the task name.</string>
    <string name="error_delete_item_fail">Error: Failed to delete item.</string>

    <array name="array_priority">
        <item>HIGH</item>
        <item>MID</item>
        <item>LOW</item>
    </array>
    <array name="array_status">
        <item>TODO</item>
        <item>PEND</item>
        <item>DONE</item>
    </array>
</resources>
