<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_root"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">
    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/item_taskname"
                android:paddingRight="@dimen/text_view_right_margin"
                android:textColor="@color/colorPrimaryDarkAux"/>
            <TextView
                android:id="@+id/txv_taskname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimaryDarkAux"/>
        </TableRow>
        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/item_duedate"
                android:paddingRight="@dimen/text_view_right_margin"
                android:textColor="@color/colorPrimaryDarkAux"/>
            <TextView
                android:id="@+id/txv_due"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimaryDarkAux" />
        </TableRow>
        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/item_memo"
                android:paddingRight="@dimen/text_view_right_margin"
                android:textColor="@color/colorPrimaryDarkAux"/>
            <TextView
                android:id="@+id/txv_memo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimaryDarkAux"/>
        </TableRow>
        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/item_priority"
                android:paddingRight="@dimen/text_view_right_margin"
                android:textColor="@color/colorPrimaryDarkAux"/>
            <TextView
                android:id="@+id/txv_priority"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimaryDarkAux"/>
        </TableRow>
        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/item_status"
                android:paddingRight="@dimen/text_view_right_margin"
                android:textColor="@color/colorPrimaryDarkAux"/>
            <TextView
                android:id="@+id/txv_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimaryDarkAux"/>
        </TableRow>
    </TableLayout>
</LinearLayout>